# mandelbrotSet

./: CMakeLists.txt  board.h  constants.h  function.h  mandelbrot.frag  mandelbrotSet.cpp  types.h  utils.h
